Протестил работоспособность, сделал инициализацию пользователей, меро и направлений, написал dockerfile
